# react-native-image-to-rgb

./: .npmignore  CLAUDE.md  CONTRIBUTING.md  NitroAiImage.podspec  README.md  nitro.json  package-lock.json  package.json  react-native-ai-image.podspec  react-native-image-to-rgb.podspec  react-native.config.js  release-it.config.js  tsconfig.build.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/aiimage/: AiImagePackage.kt
android/src/main/java/com/imagetorgb/: ImageToRgbPackage.kt
android/src/main/java/com/margelo/nitro/aiimage/: HybridAiImage.kt
android/src/main/java/com/margelo/nitro/imagetorgb/: HybridImageToRgb.kt
example/: package.json
example/src/: App.tsx
ios/: HybridAiImage.swift  HybridImageToRgb.swift
scripts/: strip-swift-header-hack.js
src/: index.ts
src/__tests__/: index.test.ts
src/specs/: AiImage.nitro.ts  ImageToRgb.nitro.ts
